# DeliveryBox

./: .gitignore  README.md
BoxDesign/: DeliveryBox.FCMacro  PianoHinge.py  README.md  READNE.md  Units.py  debug.py
Circuit/: DisplayModule.fzz  MainControlModule.fzz  README.md
Circuit/AllInOneModule/: AllInOneModule-eagle-import.kicad_sym  AllInOneModule.kicad_pcb  AllInOneModule.kicad_prl  AllInOneModule.kicad_pro  AllInOneModule.kicad_sch  DisplayModule.kicad_sch  fp-lib-table  sym-lib-table
Circuit/AllInOneModule/Extra.pretty/: CONN_USB4930-00-A_GCT.kicad_mod  S5A-E3_57T.stp  S5AE357T.kicad_mod
Circuit/DisplayModule/: DisplayModule.kicad_pcb  DisplayModule.kicad_prl  DisplayModule.kicad_pro  DisplayModule.kicad_sch  LEDControlers.kicad_sym  LED_Displys.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
Circuit/DisplayModule/Displays.pretty/: KWA-541AVB_3D.step  KWA-541XVB.kicad_mod  KWA-541XVB.wrl
Circuit/SolarLights/: SolarLights.fzz
Circuit/SolarLights/AutoSolarLights/: AutoSolarLights.ino  Makefile
DeliveryBoxFirmware/: BLE_WEB.html  Bluetooth_ConfigServer.cpp  Bluetooth_ConfigServer.h  Bluetooth_UART.cpp  Bluetooth_UART.cpp_unused  Bluetooth_UART.h_unused  DeliveryBoxApp.html  DeliveryBoxFirmware.ino  DeliveryBoxWebserver.cpp  DeliveryBoxWebserver.h  Display.cpp  Display.h  Doxyfile  GPIO_MAP.h  GeneratePassKey.py  Keypad4x3.cpp  Keypad4x3.h  LockProcess.cpp  LockProcess.h  LockServo.cpp  LockServo.h  Makefile  Networking.cpp  Networking.h  README.md  Revision.py  Robot1-110.h
Firmware/: CMakeLists.txt  READNE.md
Firmware/main/: CMakeLists.txt
MobileApp/: README.md
MobileApp/DeliveryBox/: Package.swift  README.md
MobileApp/DeliveryBox/Tests/: LinuxMain.swift
MobileApp/DeliveryBox_Android/: settings.gradle.kts
MobileApp/DeliveryBox_Android/app/: build.gradle.kts
MobileApp/DeliveryBox_Android/gradle/: libs.versions.toml
MobileApp/DeliveryBox_iOS/DeliveryBox_iOS/: ContentView.swift  DelBoxButtonStyle.swift  Info.plist  (+3 more)
MobileApp/DeliveryBox_iOS/DeliveryBox_iOS.xcodeproj/: project.pbxproj
(+20 files in other folders)
